--- a/soundboard3.html
+++ b/soundboard3.html
@@ -198,7 +198,24 @@
 		sync="own-on: mousedown" sync-n-sound>
 		<a-entity n-text="fontSize: 1; text: drumrollhit" position="0 0.3 0"></a-entity>
 	</a-entity>
-
+	
+	<a-entity id="score"
+		geometry="primitive: box" material="color: red" position="1.05 5.2 9" rotation="0 0 0" scale="0.15 0.15 0.05"
+		n-sound="src: files/DrumRoll_Hit.wav; volume: 0.7; oneshot: true; on: click"
+		altspace-cursor-collider="enabled: true"
+		sync="own-on: mousedown" sync-n-sound>
+		<a-animation attribute="visible" dur="5000" to="false" repeat="indefinite"></a-animation>
+	</a-entity>
+	
+	<a-entity position="1.35 5.2 9" scale="0.2 0.2 0.2" geometry="primitive: box" material="color: blue" wire="on: click; emit: toggle; targets: #score"></a-entity>
+    	<a-entity id="score" geometry="primitive:box" material="color: white" position="1.35 6 9" rotation="0 0 0" scale="0.5 0.5 0.5" sync="own-on: toggle" sync-transform
+      		n-sound="src: files/DrumRoll_Hit.wav; volume: 0.7; oneshot: true; on: click"
+		altspace-cursor-collider="enabled: true"
+		sync="own-on: mousedown" sync-n-sound>
+		<a-animation attribute="visible" begin="toggle" dur="5000"></a-animation>
+      		<a-animation attribute="rotation" begin="toggle" to="0 360 0" easing="linear" dur="20000" repeat="indefinite"></a-animation>
+	</a-entity>
+		
 </a-scene>
 </body>
 </html>
