--- a/soundboard3.html
+++ b/soundboard3.html
@@ -204,7 +204,7 @@
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
 	</a-entity>
-    	<a-entity id="score" geometry="primitive: box" material="color: white" visible="false" position="1.35 6 9" rotation="0 0 0" scale="0.5 0.5 0.5" sync="own-on: toggle" sync-transform>
+    	<a-entity id="score" geometry="primitive: box" material="color: white" position="1.35 6 9" rotation="0 0 0" scale="0.5 0.5 0.5" sync="own-on: toggle" visible="false">
 		<a-animation attribute="visible" begin="toggle" dur="5000"></a-animation>
       		<a-animation attribute="rotation" begin="toggle" to="0 360 0" easing="linear" dur="20000" repeat="indefinite"></a-animation>
 	</a-entity>
