--- a/soundboard3.html
+++ b/soundboard3.html
@@ -204,8 +204,8 @@
 		altspace-cursor-collider="enabled: true"
 		sync="own-on: mousedown" sync-n-sound>
 	</a-entity>
-    	<a-entity id="score" visible="false" geometry="primitive: box" material="color: white" position="1.35 8 9" rotation="0 0 0" scale="0.5 0.5 0.5" sync="own-on: toggle">
-		<a-animation attribute="visible" begin="toggle" dur="5000" to="false" repeat="indefinite"></a-animation>
+    	<a-entity id="score" visible="false" geometry="primitive: plane" material="color: white" position="1.35 8 9" rotation="0 0 0" scale="0.5 0.5 0.5" sync="own-on: toggle">
+		<a-animation attribute="visible" begin="toggle" dur="5000" from="true" to="false" repeat="indefinite"></a-animation>
       		<a-animation attribute="rotation" begin="toggle" to="0 360 0" easing="linear" dur="20000" repeat="indefinite"></a-animation>
 	</a-entity>
 		
