--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
 		one-per-user="primitive: box parent-to-left-hand">
 	</a-entity>
 	
+	<a-entity id="score-button" position="1.35 5.2 9" scale="0.2 0.2 0.2" geometry="primitive: box" material="color: blue" wire="on: click; emit: toggle; targets: #score"
+		n-sound="src: files/DrumRoll_Hit.wav; volume: 0.7; oneshot: true; on: click"
+		altspace-cursor-collider="enabled: true"
+		sync="own-on: mousedown" sync-n-sound>
+	</a-entity>
+    	<a-entity id="score" visible="false" geometry="primitive: plane" material="color: white" position="1.35 8 9" rotation="0 0 0" scale="0.5 0.5 0.5" sync="own-on: toggle">
+		<a-animation attribute="visible" begin="toggle" dur="5000" from="true" to="false" repeat="indefinite"></a-animation>
+      		<a-animation attribute="rotation" begin="toggle" to="0 360 0" easing="linear" dur="20000" repeat="indefinite"></a-animation>
+	</a-entity>
+	
 </a-scene>
 </body>
 </html>
