--- a/radio.html
+++ b/radio.html
@@ -9,12 +9,12 @@
 <body>
 	
 	<a-assets>
-    		<a-asset-item id="desk" src="desk.dae"></a-asset-item>
+    		<a-asset-item id="desk2" src="desk2.dae"></a-asset-item>
 	</a-assets>  
 	
 <a-scene altspace="fullspace: true" sync-system="author: altspacevr; app: sound-sync-soundboard">
 
-	<a-entity collada-model="#desk" light="type: ambient; color: #CCC" position="10.2 -0.8 -8.5" scale="0.8 0.8 0.8" rotation="0 20 0"></a-entity>
+	<a-entity collada-model="#desk2" light="type: ambient; color: #CCC" position="10.2 -0.8 -8.5" scale="0.8 0.8 0.8" rotation="0 20 0"></a-entity>
 	
 	<a-entity position="10.5 -3 -7.5" rotation="0 200 0">
 		<a-entity id="Air_Horn"
