--- a/radio.html
+++ b/radio.html
@@ -14,7 +14,7 @@
 	
 <a-scene altspace="fullspace: true" sync-system="author: altspacevr; app: sound-sync-soundboard">
 
-	<a-entity collada-model="#desk" light="type: ambient; color: #CCC" position="0 0.65 9.5" scale="0.8 0.8 0.8" rotation="0 0 0"></a-entity>
+	<a-entity collada-model="#desk2" position="0 0.65 9.5" scale="1 1 1" rotation="0 180 0"></a-entity>
 	
 	<a-entity position="0 0 10.5" rotation="0 90 0">
 		<a-entity id="Air_Horn"
