--- a/radio.html
+++ b/radio.html
@@ -18,7 +18,7 @@
 	
 	<a-entity position="0 -1.5 9" rotation="0 0 0">
 		<a-entity id="Air_Horn"
-			geometry="primitive: box" material="color: green" position="-0.75 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
+			geometry="primitive: plane" material="color: green" position="-0.75 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
 			n-sound="src: radio/Air_Horn.wav; volume: 1; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
