--- a/radio.html
+++ b/radio.html
@@ -26,7 +26,7 @@
 		</a-entity>
 
 		<a-entity id="Dont_call_me_Shirley"
-			geometry="primitive: box" material="color: green" position="-0.45 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
+			geometry="primitive: plane" material="color: green" position="-0.45 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
 			n-sound="src: radio/Dont_call_me_Shirley.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
@@ -34,7 +34,7 @@
 		</a-entity>
 
 		<a-entity id="Dum_dum_dum"
-			geometry="primitive: box" material="color: green" position="-0.15 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
+			geometry="primitive: plane" material="color: green" position="-0.15 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
 			n-sound="src: radio/Dum_dum_dum.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
@@ -42,7 +42,7 @@
 		</a-entity>
 
 		<a-entity id="Fart"
-			geometry="primitive: box" material="color: green" position="0.15 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
+			geometry="primitive: plane" material="color: green" position="0.15 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
 			n-sound="src: radio/Fart.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
@@ -50,7 +50,7 @@
 		</a-entity>
 
 		<a-entity id="From_San_Francisco"
-			geometry="primitive: box" material="color: green" position="0.45 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
+			geometry="primitive: plane" material="color: green" position="0.45 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
 			n-sound="src: radio/From_San_Francisco.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
@@ -58,7 +58,7 @@
 		</a-entity>
 
 		<a-entity id="Hot_Pockets"
-			geometry="primitive: box" material="color: green" position="0.75 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
+			geometry="primitive: plane" material="color: green" position="0.75 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
 			n-sound="src: radio/Hot_Pockets.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
@@ -66,7 +66,7 @@
 		</a-entity>
 
 		<a-entity id="I_like_turtles"
-			geometry="primitive: box" material="color: green" position="-0.75 2.5 0" rotation="0 0 0" scale="0.15 0.15 0.05"
+			geometry="primitive: plane" material="color: green" position="-0.75 2.5 0" rotation="0 0 0" scale="0.15 0.15 0.05"
 			n-sound="src: radio/I_like_turtles.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
@@ -74,7 +74,7 @@
 		</a-entity>
 
 		<a-entity id="Intro"
-			geometry="primitive: box" material="color: green" position="-0.45 2.5 0" rotation="0 0 0" scale="0.15 0.15 0.05"
+			geometry="primitive: plane" material="color: green" position="-0.45 2.5 0" rotation="0 0 0" scale="0.15 0.15 0.05"
 			n-sound="src: radio/Intro.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
@@ -82,7 +82,7 @@
 		</a-entity>
 
 		<a-entity id="Rice_a_roni"
-			geometry="primitive: box" material="color: green" position="-0.15 2.5 0" rotation="0 0 0" scale="0.15 0.15 0.05"
+			geometry="primitive: plane" material="color: green" position="-0.15 2.5 0" rotation="0 0 0" scale="0.15 0.15 0.05"
 			n-sound="src: radio/Rice_a_roni.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
@@ -90,7 +90,7 @@
 		</a-entity>
 
 		<a-entity id="These_go_to_11"
-			geometry="primitive: box" material="color: green" position="0.15 2.5 0" rotation="0 0 0" scale="0.15 0.15 0.05"
+			geometry="primitive: plane" material="color: green" position="0.15 2.5 0" rotation="0 0 0" scale="0.15 0.15 0.05"
 			n-sound="src: radio/These_go_to_11.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
@@ -98,7 +98,7 @@
 		</a-entity>
 
 			<a-entity id="Waynes_World"
-			geometry="primitive: box" material="color: green" position="0.45 2.5 0" rotation="0 0 0" scale="0.15 0.15 0.05"
+			geometry="primitive: plane" material="color: green" position="0.45 2.5 0" rotation="0 0 0" scale="0.15 0.15 0.05"
 			n-sound="src: radio/Waynes_World.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
