--- a/radio.html
+++ b/radio.html
@@ -10,11 +10,12 @@
 	
 	<a-assets>
     		<a-asset-item id="desk2" src="desk2.dae"></a-asset-item>
+		<a-asset-item id="desk3" src="desk3.dae"></a-asset-item>
 	</a-assets>  
 	
 <a-scene altspace="fullspace: true" sync-system="author: altspacevr; app: sound-sync-soundboard">
 
-	<a-entity collada-model="#desk2" position="0 0.65 8.5" scale="1 1 1" rotation="0 180 0"></a-entity>
+	<a-entity collada-model="#desk3" position="0 0.65 8.5" scale="1 1 1" rotation="0 180 0"></a-entity>
 	
 	<a-entity position="0 -1.5 9" rotation="0 0 0">
 		<a-entity id="Air_Horn"
