--- a/radio.html
+++ b/radio.html
@@ -26,25 +26,25 @@
 			<a-entity n-text="fontSize: 2; text: Air_Horn" position="0 -0.6 0"></a-entity>
 		</a-entity>
 
-		<a-entity id="Dont_call_me_Shirley"
+		<a-entity id="Crickets"
 			geometry="primitive: plane" material="color: green" position="-0.45 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
-			n-sound="src: radio/Dont_call_me_Shirley.wav; volume: 0.7; oneshot: true; on: click"
+			n-sound="src: radio/Crickets.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
 			<a-entity n-text="fontSize: 2; text: Dont_call_me_Shirley" position="0 -0.6 0"></a-entity>
 		</a-entity>
 
-		<a-entity id="Dum_dum_dum"
+		<a-entity id="Dogs"
 			geometry="primitive: plane" material="color: green" position="-0.15 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
-			n-sound="src: radio/Dum_dum_dum.wav; volume: 0.7; oneshot: true; on: click"
+			n-sound="src: radio/Dogs.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
 			<a-entity n-text="fontSize: 2; text: Dum_dum_dum" position="0 -0.6 0"></a-entity>
 		</a-entity>
 
-		<a-entity id="Fart"
+		<a-entity id="Fog"
 			geometry="primitive: plane" material="color: green" position="0.15 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
-			n-sound="src: radio/Fart.wav; volume: 0.7; oneshot: true; on: click"
+			n-sound="src: radio/Fog Horn.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
 			<a-entity n-text="fontSize: 2; text: Fart.wav" position="0 -0.6 0"></a-entity>
@@ -66,9 +66,9 @@
 			<a-entity n-text="fontSize: 2; text: Hot_Pockets" position="0 -0.6 0"></a-entity>
 		</a-entity>
 
-		<a-entity id="I_like_turtles"
+		<a-entity id="Folgers"
 			geometry="primitive: plane" material="color: green" position="-0.75 2.5 0" rotation="0 0 0" scale="0.15 0.15 0.05"
-			n-sound="src: radio/I_like_turtles.wav; volume: 0.7; oneshot: true; on: click"
+			n-sound="src: radio/Folgers.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
 			<a-entity n-text="fontSize: 2; text: I_like_turtles" position="0 0.6 0"></a-entity>
@@ -90,17 +90,17 @@
 			<a-entity n-text="fontSize: 2; text: Rice_a_roni" position="0 0.6 0"></a-entity>
 		</a-entity>
 
-		<a-entity id="These_go_to_11"
+		<a-entity id="Laughter"
 			geometry="primitive: plane" material="color: green" position="0.15 2.5 0" rotation="0 0 0" scale="0.15 0.15 0.05"
-			n-sound="src: radio/These_go_to_11.wav; volume: 0.7; oneshot: true; on: click"
+			n-sound="src: radio/Laughter.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
 			<a-entity n-text="fontSize: 2; text: These_go_to_11" position="0 0.6 0"></a-entity>
 		</a-entity>
 
-			<a-entity id="Waynes_World"
+			<a-entity id="Phone"
 			geometry="primitive: plane" material="color: green" position="0.45 2.5 0" rotation="0 0 0" scale="0.15 0.15 0.05"
-			n-sound="src: radio/Waynes_World.wav; volume: 0.7; oneshot: true; on: click"
+			n-sound="src: radio/Phone.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
 			<a-entity n-text="fontSize: 2; text: Waynes_World" position="0 0.6 0"></a-entity>
