--- a/radio.html
+++ b/radio.html
@@ -44,7 +44,7 @@
 
 		<a-entity id="Fog"
 			geometry="primitive: plane" material="color: green" position="0.15 2.8 0" rotation="0 0 0" scale="0.15 0.15 0.05"
-			n-sound="src: radio/Fog Horn.wav; volume: 0.7; oneshot: true; on: click"
+			n-sound="src: radio/Fog%20Horn.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
 			<a-entity n-text="fontSize: 2; text: Fart.wav" position="0 -0.6 0"></a-entity>
