--- a/radio.html
+++ b/radio.html
@@ -31,7 +31,7 @@
 			n-sound="src: radio/Crickets.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
-			<a-entity n-text="fontSize: 2; text: Dont_call_me_Shirley" position="0 -0.6 0"></a-entity>
+			<a-entity n-text="fontSize: 2; text: Crickets" position="0 -0.6 0"></a-entity>
 		</a-entity>
 
 		<a-entity id="Dogs"
@@ -39,7 +39,7 @@
 			n-sound="src: radio/Dogs.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
-			<a-entity n-text="fontSize: 2; text: Dum_dum_dum" position="0 -0.6 0"></a-entity>
+			<a-entity n-text="fontSize: 2; text: Dogs" position="0 -0.6 0"></a-entity>
 		</a-entity>
 
 		<a-entity id="Fog"
@@ -47,7 +47,7 @@
 			n-sound="src: radio/Fog%20Horn.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
-			<a-entity n-text="fontSize: 2; text: Fart.wav" position="0 -0.6 0"></a-entity>
+			<a-entity n-text="fontSize: 2; text: Fog" position="0 -0.6 0"></a-entity>
 		</a-entity>
 
 		<a-entity id="From_San_Francisco"
@@ -71,7 +71,7 @@
 			n-sound="src: radio/Folgers.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
-			<a-entity n-text="fontSize: 2; text: I_like_turtles" position="0 0.6 0"></a-entity>
+			<a-entity n-text="fontSize: 2; text: Folgers" position="0 0.6 0"></a-entity>
 		</a-entity>
 
 		<a-entity id="Intro"
@@ -95,7 +95,7 @@
 			n-sound="src: radio/Laughter.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
-			<a-entity n-text="fontSize: 2; text: These_go_to_11" position="0 0.6 0"></a-entity>
+			<a-entity n-text="fontSize: 2; text: Laughter" position="0 0.6 0"></a-entity>
 		</a-entity>
 
 			<a-entity id="Phone"
@@ -103,7 +103,7 @@
 			n-sound="src: radio/Phone.wav; volume: 0.7; oneshot: true; on: click"
 			altspace-cursor-collider="enabled: true"
 			sync="own-on: mousedown" sync-n-sound>
-			<a-entity n-text="fontSize: 2; text: Waynes_World" position="0 0.6 0"></a-entity>
+			<a-entity n-text="fontSize: 2; text: Phone" position="0 0.6 0"></a-entity>
 		</a-entity>
 	</a-entity>
 
